# rl_sim

./: .gitignore  CMakeLists.txt  README.md  __init__.py  binding.c  drone.py  install.sh  pyproject.toml  robot.py  setup.py  uninstall.sh
benchmarks/: CMakeLists.txt  baseline_results.txt  bench_collision.c  bench_engine.c  bench_engine_gpu.c  bench_harness.h  bench_physics.c  bench_pipeline_comprehensive.c  bench_rewards.c  bench_sensors.c  bench_sensors_gpu.c  bench_world.c
configs/: lidar_3d.toml  orbit_demo.toml
include/: drone_rl.h
input/environments/: 3.mtl
scripts/: demo_gyroid_orbit.py  demo_platonic_orbit.py
scripts/training/: train_hover.py  visualizer.py
src/collision_system/: CMakeLists.txt  collision_system_usage.md
src/collision_system/include/: collision_system.h
src/collision_system/src/: collision_system.c
src/collision_system/tests/: bench_collision_system.c  test_collision_stress.c  test_collision_system.c
src/configuration/: CMakeLists.txt
src/configuration/include/: configuration.h  urdf_parser.h
src/configuration/src/: config_conversion.c  config_defaults.c  config_parser.c  config_serialization.c  config_validation.c  urdf_parser.c
src/configuration/test_data/: crazyflie.urdf  invalid_bad_integrator.toml  invalid_negative_mass.toml  invalid_spawn_heights.toml  invalid_zero_inertia.toml  invalid_zero_timestep.toml  valid_crazyflie.toml  valid_full.toml  valid_hover_task.toml  valid_minimal.toml
src/configuration/tests/: bench_configuration.c  test_config_validation_deep.c  test_configuration.c  test_urdf.c
src/drone_state/: CMakeLists.txt  drone_state_usage.md
src/drone_state/include/: drone_state.h
src/drone_state/src/: drone_state.c
src/drone_state/tests/: bench_drone_state.c  test_drone_state.c  test_drone_state_deep.c
src/environment_manager/: CMakeLists.txt
src/environment_manager/include/: environment_manager.h
src/environment_manager/src/: engine_buffers.c  engine_config.c  engine_lifecycle.c  engine_queries.c  engine_reset.c  engine_stats.c  engine_step.c  engine_world.c  puffer_env.c
src/environment_manager/tests/: bench_environment.c  test_camera_ground_truth.c  test_determinism_deep.c  test_engine_buffers.c  test_engine_config.c  test_engine_core.c  test_engine_determinism.c  test_engine_integration.c  test_engine_lifecycle.c  test_engine_memory.c  test_engine_reset.c  test_engine_step.c  test_lidar_world_integration.c  test_memory_deep.c  test_multi_engine.c  test_puffer_env.c
src/foundation/: CMakeLists.txt  README.md  foundation_usage.md
src/foundation/include/: bench_harness.h  foundation.h  test_harness.h
src/foundation/src/: arena.c  math.c  pcg32.c
src/foundation/tests/: bench_foundation.c  test_arena.c  test_math.c  test_pcg32.c  test_simd.c
src/gpu/: CMakeLists.txt
src/gpu/include/: gpu_hal.h
src/gpu/shaders/: raymarch.metal  sdf_types.h  voxelize.metal
src/gpu/src/: gpu_bvh.c  gpu_common.c  gpu_metal.m  gpu_none.c  gpu_sensor_context.c  gpu_sensor_dispatch.c  gpu_voxelize.c
src/gpu/tests/: test_gpu_all_sensors.c  test_gpu_determinism.c  test_gpu_hal.c  test_gpu_pipeline.c  test_gpu_raymarch.c  test_gpu_voxelize.c
src/obj_io/: CMakeLists.txt
src/obj_io/include/: obj_io.h
src/obj_io/src/: bvh.c  marching_cubes.c  mesh.c  mtl_parser.c  obj_parser.c  obj_writer.c  parse_utils.h  voxelize.c
src/obj_io/tests/: bench_obj_io.c  diag_gyroid_signs.c  diag_mc_welding.c  diag_mountain_roundtrip.c  diag_ridge_artifacts.c  diag_shell_artifacts.c  test_marching_cubes.c  test_materials.c  test_mesh.c  test_mtl_parser.c  test_obj_parser.c  test_roundtrip.c  test_voxelize.c
src/obj_io/tools/: obj_io_tool.c
src/physics/: CMakeLists.txt  physics_engine_usage.md
src/physics/include/: physics.h
src/physics/src/: physics.c
src/physics/tests/: bench_physics.c  test_physics.c
src/platform/: CMakeLists.txt
src/platform/include/: platform.h  platform_diff_drive.h  platform_quadcopter.h
src/platform/src/: platform_diff_drive.c  platform_quadcopter.c  platform_registry.c
src/platform/tests/: test_platform_diff_drive.c  test_platform_quadcopter.c
src/reward_system/: CMakeLists.txt  reward_system_usage.md
src/reward_system/include/: reward_system.h
src/reward_system/src/: reward_system.c
src/reward_system/tests/: bench_reward_system.c  test_reward_system.c
src/rigid_body_state/: CMakeLists.txt
src/rigid_body_state/include/: rigid_body_state.h
src/rigid_body_state/src/: rigid_body_state.c
src/rigid_body_state/tests/: test_rigid_body_state.c
src/sensor_implementations/: CMakeLists.txt
src/sensor_implementations/include/: sensor_implementations.h
src/sensor_implementations/src/: sensor_camera.c  sensor_direct.c  sensor_imu.c  sensor_lidar.c  sensor_neighbor.c  sensor_registry.c  sensor_tof.c
src/sensor_implementations/tests/: bench_sensor_implementations.c  test_sensor_implementations.c
src/sensor_system/: CMakeLists.txt  sensor_usage.md
src/sensor_system/include/: noise.h  sensor_system.h
src/sensor_system/src/: noise.c  sensor_system.c
src/sensor_system/tests/: bench_sensor_system.c  test_noise.c  test_noise_deep.c  test_sensor_system.c
src/threading/: CMakeLists.txt  threading_usage.md
src/threading/include/: threading.h
src/threading/src/: barrier.c  deque.c  mpmc_queue.c  scheduler.c  spsc_queue.c  threadpool.c
src/threading/tests/: bench_threading.c  test_barrier.c  test_deque.c  test_mpmc.c  test_scheduler.c  test_spsc.c  test_threadpool.c
src/world_brick_map/: CMakeLists.txt  to_do.md  world_brick_map_usage.md
src/world_brick_map/include/: world_brick_map.h
src/world_brick_map/src/: clipmap.c  incremental.c  world_brick_map.c
src/world_brick_map/tests/: bench_world_brick_map.c  test_geometry_primitives.c  test_world_advanced.c  test_world_brick_map.c  test_world_materials.c
utils/: generate_gyroid_cube.py
