[tool.poetry]
name = "rl-engine"
version = "1.0.0"
description = "High-performance drone swarm RL environment with PufferLib integration"
authors = ["Drone RL Team"]
packages = [{include = "*.py"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
numpy = ">=1.21,<2.0"
gymnasium = ">=0.29.1"
pufferlib = ">=2.0"
matplotlib = ">=3.5"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
